DevOps-Trainee-Course/Module-6/Task_2.8/kubernetes/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: ingress.konbusalovlocal.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingress-task-clusterip-service
                port:
                  number: 80
